plugins {
    id 'java'
}

group 'com.sourceflag'
version '0.0.1'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile(project(":spring-context"))
    compile(project(":spring-core"))
    compile(project(":spring-beans"))
    compile(project(":spring-aop"))
    compile(project(":spring-aspects"))
    compile(project(":spring-tx"))
    compile(project(":spring-jdbc"))
    compile(project(":spring-web"))
    compile(project(":spring-webmvc"))
//    compile 'org.mybatis:mybatis-spring:1.3.3'
    compile 'org.mybatis:mybatis-spring:2.0.6'
    compile 'org.mybatis:mybatis:3.5.6'
    compile 'mysql:mysql-connector-java:8.0.22'
    compile 'com.alibaba:druid:1.2.4'
    compile 'org.apache.tomcat.embed:tomcat-embed-core:8.5.61'
    compile 'org.apache.tomcat.embed:tomcat-embed-websocket:8.5.61'
    compile 'org.apache.tomcat.embed:tomcat-embed-jasper:8.5.61'
    compile 'com.alibaba:fastjson:1.2.75'
    compile 'org.projectlombok:lombok:1.18.16'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
